Fixed notebook to the last version of the BBG lib #151 (#153)

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -108,7 +108,9 @@
     "                                  resolve_taxonomy_to_types)\n",
     "            \n",
     "from bbg_apps.curation_app import (curation_app)\n",
-    "from bbg_apps.visualization_app import (visualization_app)"
+    "from bbg_apps.visualization_app import (visualization_app)\n",
+    "\n",
+    "from kganalytics.export import load_network"
    ]
   },
   {
@@ -644,14 +646,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- **input**: csv table of extracted entities/relations\n",
-    "- **output**: knowledge graph"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -672,6 +666,14 @@
    "metadata": {},
    "source": [
     "## Curate the table with extracted entities"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **input**: csv table of extracted entities/relations\n",
+    "- **output**: csv table with curated and ontology linked entities/relations"
    ]
   },
   {
@@ -710,6 +712,7 @@
     "\n",
     "print(\"Loading the ontology linking data...\")\n",
     "linking = pd.read_pickle(\"/gpfs/bbp.cscs.ch/project/proj116/network_analytics/data/cord_47_linking.pkl\")\n",
+    "definitions = linking[[\"concept\", \"definition\"]].groupby(\"concept\").aggregate(lambda x: list(x)[0]).to_dict()[\"definition\"]\n",
     "\n",
     "print(\"Loading default ontology type mapping...\")\n",
     "with open('/gpfs/bbp.cscs.ch/project/proj116/bbg/ontology-linking/ncit_to_mltypes_mapping.json', \"rb\") as f:\n",
@@ -722,7 +725,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Run the curation app"
+    "Run the curation app. In case of the error 'Address already in use', try specifying another port (for example, in the range 8072-8099)"
    ]
   },
   {
@@ -735,7 +738,7 @@
     "curation_app.set_table(curation_input_table.copy())\n",
     "curation_app.set_ontology_linking_callback(lambda x: link_ontology(linking, default_type_mapping, x))\n",
     "\n",
-    "curation_app.run(port=8076)"
+    "curation_app.run(port=8071)"
    ]
   },
   {
@@ -743,6 +746,14 @@
    "metadata": {},
    "source": [
     "## Create a co-mention graph from curated entities"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **input**: csv table with curated and ontology linked entities/relations\n",
+    "- **output**: graph objects with co-occurrence network and its spanning tree"
    ]
   },
   {
@@ -766,6 +777,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a co-mention network from curated table"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -774,7 +792,8 @@
     "type_data = curated_table_extractions[[\"entity_type\"]].rename(columns={\"entity_type\": \"type\"})\n",
     "n_most_frequent = curation_app.n_most_frequent if curation_app.n_most_frequent else 100\n",
     "graphs, trees = generate_comention_analysis(\n",
-    "    curated_table_extractions, factor_counts, type_data=type_data, min_occurrences=5, n_most_frequent=n_most_frequent, factors=[\"paper\"], cores=10)"
+    "    curated_table_extractions, factor_counts, n_most_frequent=n_most_frequent, type_data=type_data, factors=[\"paper\", \"paragraph\"], cores=10)\n",
+    "print(\"Done.\")"
    ]
   },
   {
@@ -784,7 +803,7 @@
    "outputs": [],
    "source": [
     "cytoscape_graphs = dict()\n",
-    "for f in [\"paper\"]:\n",
+    "for f in [\"paper\", \"paragraph\"]:\n",
     "    cytoscape_graphs[f] = {\n",
     "        \"tree\": build_cytoscape_data(trees[f]),\n",
     "        \"graph\": build_cytoscape_data(graphs[f])\n",
@@ -798,29 +817,45 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "print(\"Loading pre-generated 3000 graphs...\")\n",
-    "with open(\"/gpfs/bbp.cscs.ch/project/proj116/cytoscape_3000/paper_spanning_tree_3000.cyjs\") as f:\n",
-    "    paper_spanning_tree = json.load(f)\n",
-    "    \n",
-    "paper_spanning_tree_list = paper_spanning_tree[\"elements\"][\"nodes\"] + paper_spanning_tree[\"elements\"][\"edges\"]\n",
-    "paper_spanning_tree_dict = {elt['data']['uid']:elt for elt in paper_spanning_tree_list  if \"uid\" in elt['data']}\n",
     "\n",
-    "with open(\"/gpfs/bbp.cscs.ch/project/proj116/cytoscape_3000/paper_clusters_3000.cyjs\",\"r\") as f:\n",
-    "    paper_spanning_clusters = json.load(f)\n",
-    "    \n",
-    "paper_spanning_clusters_list = paper_spanning_clusters[\"elements\"][\"nodes\"] + paper_spanning_clusters[\"elements\"][\"edges\"]\n",
-    "paper_spanning_clusters_dict = {elt['data']['uid']:elt for elt in paper_spanning_clusters_list  if \"uid\" in elt['data']}\n",
+    "prefix = \"/gpfs/bbp.cscs.ch/project/proj116/network_analytics/data/graphs/cord_47/full_3000\"\n",
+    "\n",
+    "print(\"Loading pre-generated graphs with 3'000 entities...\")\n",
+    "print(\"\\t - paper-based network\")\n",
+    "paper_graph = load_network(\"{}_paper_edge_list.pkl\".format(prefix), \"{}_paper_node_list.pkl\".format(prefix))\n",
+    "paper_spanning_tree = load_network(\"{}_paper_tree_edge_list.pkl\".format(prefix), \"{}_paper_tree_node_list.pkl\".format(prefix))\n",
+    "nx.set_node_attributes(\n",
+    "    paper_spanning_tree, {\n",
+    "        n: len(paper_spanning_tree.nodes[n][\"paper\"])\n",
+    "        for n in paper_spanning_tree.nodes()\n",
+    "    },\n",
+    "    \"paper_frequency\")\n",
+    "\n",
+    "print(\"\\t - paragraph-based network\")\n",
+    "paragraph_graph = load_network(\"{}_paragraph_edge_list.pkl\".format(prefix), \"{}_paragraph_node_list.pkl\".format(prefix))\n",
+    "paragraph_spanning_tree = load_network(\"{}_paragraph_tree_edge_list.pkl\".format(prefix), \"{}_paragraph_node_list.pkl\".format(prefix))\n",
+    "nx.set_node_attributes(\n",
+    "    paragraph_spanning_tree, {\n",
+    "        n: len(paragraph_spanning_tree.nodes[n][\"paper\"])\n",
+    "        for n in paragraph_spanning_tree.nodes()\n",
+    "    },\n",
+    "    \"paper_frequency\")\n",
     "print(\"Done.\")\n",
     "\n",
-    "print(\"Loading pre-generated 3000 styles...\")\n",
-    "with open(\"/gpfs/bbp.cscs.ch/project/proj116/cytoscape_3000/paper_spanning_tree_3000_styles.json\",\"r\") as f:\n",
-    "    paper_spanning_tree_styles = json.load(f)\n",
-    "paper_spanning_tree_styles = paper_spanning_tree_styles[0]['style']\n",
+    "print(\"Loading pre-computed node positions...\")\n",
+    "with open(\"/gpfs/bbp.cscs.ch/project/proj116/network_analytics/data/positions/paper_3000.json\", \"r+\") as f:\n",
+    "    paper_positions = json.load(f)\n",
     "\n",
-    "with open(\"/gpfs/bbp.cscs.ch/project/proj116/cytoscape_3000/paper_clusters_3000_styles.json\",\"r\") as f:\n",
-    "    paper_spanning_clusters_styles = json.load(f)\n",
-    "paper_spanning_clusters_styles = paper_spanning_clusters_styles[0]['style']\n",
+    "with open(\"/gpfs/bbp.cscs.ch/project/proj116/network_analytics/data/positions/paragraph_3000.json\", \"r+\") as f:\n",
+    "    paragraph_positions = json.load(f)\n",
     "print(\"Done.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Convert pre-computed graphs to a cytoscape format + add node positions"
    ]
   },
   {
@@ -829,10 +864,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def list_papers(papers):\n",
+    "paper_3000_cyto = build_cytoscape_data(paper_spanning_tree, positions=paper_positions)\n",
+    "paragraph_3000_cyto = build_cytoscape_data(paragraph_spanning_tree, positions=paragraph_positions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def list_papers(papers, limit=200):\n",
     "    META_DATA = sqlalchemy.MetaData(bind=bbs_mysql_engine, reflect=True)\n",
     "    articles = META_DATA.tables[\"articles\"]\n",
-    "    clauses = or_( *[articles.c.article_id == x for x in papers] )\n",
+    "    clauses = or_( *[articles.c.article_id == x for x in papers[:limit]] )\n",
     "    s = select([\n",
     "        articles.c.title,\n",
     "        articles.c.authors,\n",
@@ -848,6 +893,7 @@
     "    results = []\n",
     "    for row in result:\n",
     "        results.append(row)\n",
+    "    print(results)\n",
     "    return results"
    ]
   },
@@ -858,27 +904,31 @@
    "outputs": [],
    "source": [
     "GRAPH_OBJECTS = {\n",
-    "    \"Co-mention spanning tree\": {\n",
+    "    \"Topic-centered network (paper-based)\": {\n",
     "        \"cytoscape\": cytoscape_graphs[\"paper\"][\"tree\"][0], \n",
     "        \"dict\": cytoscape_graphs[\"paper\"][\"tree\"][1],\n",
-    "        \"networkx\": trees[\"paper\"]\n",
-    "    },\n",
-    "    \"Full co-mention graph\": {\n",
-    "        \"cytoscape\": cytoscape_graphs[\"paper\"][\"graph\"][0], \n",
-    "        \"dict\": cytoscape_graphs[\"paper\"][\"graph\"][1],\n",
+    "        \"paper_lookup\": cytoscape_graphs[\"paper\"][\"tree\"][2],\n",
     "        \"networkx\": graphs[\"paper\"]\n",
     "    },\n",
-    "    \"Pre-computed spanning tree (3000)\": {\n",
-    "        \"cytoscape\": paper_spanning_tree_list, \n",
-    "        \"dict\": paper_spanning_tree_dict,\n",
-    "        \"styles\": paper_spanning_tree_styles\n",
-    "#         \"networkx\": graphs[\"paper\"]\n",
+    "    \"Topic-centered network (paragraph-based)\": {\n",
+    "        \"cytoscape\": cytoscape_graphs[\"paragraph\"][\"tree\"][0], \n",
+    "        \"dict\": cytoscape_graphs[\"paragraph\"][\"tree\"][1],\n",
+    "        \"paper_lookup\": cytoscape_graphs[\"paragraph\"][\"tree\"][2],\n",
+    "        \"networkx\": graphs[\"paragraph\"]\n",
     "    },\n",
-    "    \"Pre-computed clustered spanning tree (3000)\": {\n",
-    "        \"cytoscape\": paper_spanning_clusters_list, \n",
-    "        \"dict\": paper_spanning_clusters_dict,\n",
-    "        \"styles\": paper_spanning_clusters_styles\n",
-    "#         \"networkx\": graphs[\"paper\"]\n",
+    "    \"Naive pre-computed network (paper-based, 3000)\": {\n",
+    "        \"cytoscape\": paper_3000_cyto[0], \n",
+    "        \"dict\": paper_3000_cyto[1],\n",
+    "        \"paper_lookup\": paper_3000_cyto[2],\n",
+    "#         \"positioned\": True, # if the graph is positioned we will not generate a layout, but use the pre-computer one\n",
+    "        \"networkx\": paper_graph\n",
+    "    },\n",
+    "    \"Naive pre-computed network (paragraph-based, 3000)\": {\n",
+    "        \"cytoscape\": paragraph_3000_cyto[0], \n",
+    "        \"dict\": paragraph_3000_cyto[1],\n",
+    "        \"paper_lookup\": paragraph_3000_cyto[2],\n",
+    "#         \"positioned\": True, # if the graph is positioned we will not generate a layout, but use the pre-computer one\n",
+    "        \"networkx\": paragraph_graph\n",
     "    }\n",
     "}   "
    ]
@@ -890,15 +940,26 @@
    "outputs": [],
    "source": [
     "for k, v in GRAPH_OBJECTS.items():\n",
+    "    positioned = False\n",
+    "    if \"positioned\" in v:\n",
+    "        positioned = v[\"positioned\"]\n",
+    "    \n",
     "    visualization_app.set_graph(\n",
-    "        k, v[\"cytoscape\"], v[\"dict\"],\n",
-    "        style=v[\"styles\"] if \"styles\" in v else None,\n",
+    "        k, v[\"cytoscape\"], v[\"dict\"], v[\"paper_lookup\"],\n",
+    "        positioned=positioned,\n",
     "        nx_object=v[\"networkx\"] if \"networkx\" in v else None)\n",
     "\n",
-    "visualization_app.set_current_graph(\"Co-mention spanning tree\")\n",
+    "visualization_app.set_current_graph(\"Topic-centered network (paper-based)\")\n",
     "visualization_app.set_list_papers_callback(list_papers)\n",
-    "visualization_app.set_entity_definitons(curated_table_extractions[\"definition\"].to_dict())\n",
-    "# set_graph_object_callback.set_graph_object_callback(get_graph_object)"
+    "visualization_app.set_entity_definitons(definitions)\n",
+    "visualization_app._db_error_message = \"Failed to retreive papers (check if the variable 'bbs_mysql_engine' was initialized or check the DB connection)\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By default, the app will display only top-50 most frequent nodes, you can then choose to show all the nodes in the network"
    ]
   },
   {
@@ -907,89 +968,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "visualization_app.run(port=\"8076\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "visualization_app.cyto.elements"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import pandas as pd\n",
-    "# import numpy as np\n",
-    "# import json\n",
-    "# import uuid\n",
-    "\n",
-    "# import operator\n",
-    "\n",
-    "# from typing import Iterator, Dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import jupyter_server_proxy\n",
-    "# import jupyter_dash\n",
-    "# import dash\n",
-    "# from dash.dependencies import Input, Output, State\n",
-    "# import dash_core_components as dcc\n",
-    "# import dash_table\n",
-    "# import plotly.express as px\n",
-    "\n",
-    "\n",
-    "# from pygments import highlight\n",
-    "# from pygments.lexers import JsonLdLexer, TurtleLexer\n",
-    "# from pygments.formatters import TerminalFormatter, TerminalTrueColorFormatter\n",
-    "\n",
-    "# from tqdm.notebook import tqdm\n",
-    "# from dash.exceptions import PreventUpdate\n",
-    "\n",
-    "\n",
-    "# def pretty_print(a_json):\n",
-    "#     print(highlight(json.dumps(a_json, indent=2), JsonLdLexer(), TerminalFormatter()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Build knowledge graph from enriched annotations\n",
-    "# import json\n",
-    "# from typing import Iterable, Dict\n",
-    "# from rdflib import Graph\n",
-    "# from rdflib.extras.external_graph_libs import rdflib_to_networkx_digraph\n",
-    "# import networkx as nx\n",
-    "# from rdflib.namespace import RDF, RDFS, SKOS\n",
-    "\n",
-    "\n",
-    "# from kganalytics_utils import generate_comention_analysis\n",
-    "# # Generate a paper-based network from a mentions data frame:\n",
-    "# # - we select entities that are mentioned at least 5 times\n",
-    "# # - and we then take only 100 most frequent\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# curated_table_extractions_grouped = curated_table_extractions.rename(columns={\"entity\": \"entity_raw\"})"
+    "visualization_app.run(port=\"8077\")"
    ]
   },
   {
@@ -1014,99 +993,6 @@
    "source": [
     "# Access the knowledge graph\n",
     "The user can search, visualize, and export the knowledge graph."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# %%time\n",
-    "# import pickle\n",
-    "# print(\"Loading precomputed co-mention graphs for 3000 extracted entities...\")\n",
-    "\n",
-    "# factors = [\"paper\", \"section\", \"paragraph\"]\n",
-    "# weights = [\"npmi\", \"ppmi\"]\n",
-    "# trees = {}\n",
-    "\n",
-    "# precomputed_nodes_df = {}\n",
-    "# precomputed_edges_df = {}\n",
-    "# # open graphs if they where already generated\n",
-    "# graphs = {}\n",
-    "# for factor in tqdm(factors):\n",
-    "#     with open(\"/gpfs/bbp.cscs.ch/project/proj116/network_analytics/data/graphs/cord_47/full_{}_3000_edge_list.pkl\".format(factor), \"rb\") as f:\n",
-    "#         edges = pickle.load(f)\n",
-    "#     precomputed_edges_df[factor] = edges\n",
-    "\n",
-    "#     graph = nx.from_pandas_edgelist(\n",
-    "#         edges,\n",
-    "#          edge_attr=[\n",
-    "#             \"frequency\",\n",
-    "#             \"ppmi\",\n",
-    "#             \"npmi\",\n",
-    "#             \"distance_ppmi\",\n",
-    "#             \"distance_npmi\"\n",
-    "\n",
-    "#          ])\n",
-    "#     with open(\"/gpfs/bbp.cscs.ch/project/proj116/network_analytics/data/graphs/cord_47/full_{}_3000_node_list.pkl\".format(factor), \"rb\") as f:\n",
-    "#         nodes = pickle.load(f)\n",
-    "#     nx.set_node_attributes(graph, nodes.to_dict(\"index\"))\n",
-    "#     precomputed_nodes_df[factor] = nodes\n",
-    "#     graphs[factor] = graph\n",
-    "    \n",
-    "#     trees[factor] = {}\n",
-    "#     with open(\"/gpfs/bbp.cscs.ch/project/proj116/network_analytics/data/graphs/cord_47/full_{}_3000_edge_list.pkl\".format(factor), \"rb\") as f:\n",
-    "#         tree_edges = pickle.load(f)\n",
-    "#         tree_edges = tree_edges.rename(columns={\"Source\": \"source\", \"Target\": \"target\"})\n",
-    "#         tree = nx.from_pandas_edgelist(tree_edges)\n",
-    "#         trees[factor] = tree\n",
-    "# print(\"Done\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "import os\n",
-    "\n",
-    "import dash\n",
-    "from dash.dependencies import Input, Output, State\n",
-    "import dash_html_components as html\n",
-    "import dash_bootstrap_components as dbc\n",
-    "from kganalytics.paths import top_n_paths, top_n_tripaths\n",
-    "from collections import OrderedDict\n",
-    "from networkx.readwrite.json_graph.cytoscape import cytoscape_data\n",
-    "\n",
-    "import dash_cytoscape as cyto\n",
-    "\n",
-    "from dash.exceptions import PreventUpdate"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def load_json(st):\n",
-    "    if 'http' in st:\n",
-    "        return requests.get(st).json()\n",
-    "    else:\n",
-    "        with open(st, 'rb') as f:\n",
-    "            x = json.load(f)\n",
-    "        return x\n",
-    "    \n",
-    "# Load extra layouts\n",
-    "\n",
-    "\n",
-    "# app_tab.config['suppress_callback_exceptions']=True\n",
-    "# width = \n",
-    "# app_tab.height = \"800px\"\n",
-    "# app_tab.run_server(mode=\"jupyterlab\", width=\"100%\", port=\"8072\")"
    ]
   },
   {
@@ -1225,13 +1111,6 @@
     "\n",
     "display(save_widget)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
