Update PoC notebook with new MiningSchema

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "import ipywidgets\n",
     "\n",
-    "from bbsearch.widgets import ArticleSaver, SearchWidget, MiningWidget, SchemaRequest"
+    "from bbsearch.widgets import ArticleSaver, SearchWidget, MiningSchema, MiningWidget"
    ]
   },
   {
@@ -548,33 +548,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "schema_request = SchemaRequest()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "columns = ['entity_type', 'property', 'property_type', 'property_value_type', 'ontology_source']\n",
+    "mining_schema = MiningSchema()\n",
     "\n",
-    "etypes_sources = [('CELL_COMPARTMENT', None),\n",
-    "                  ('CELL_TYPE', None),\n",
-    "                  ('CHEMICAL', 'NCIT'), \n",
-    "                  ('CONDITION', None),\n",
-    "                  ('DISEASE', 'NCIT'),\n",
-    "                  ('DRUG', None),\n",
-    "                  ('ORGAN', 'NCIT'),\n",
-    "                  ('ORGANISM', 'NCIT'),\n",
-    "                  ('PATHWAY', 'Reactome'),\n",
-    "                  ('PROTEIN', 'NCIT')\n",
-    "                 ]\n",
-    "schema_request_data = [{'entity_type': etype, 'ontology_source': source} \n",
-    "                       for etype, source in etypes_sources]\n",
+    "mining_schema.add_entity(\"CELL_COMPARTMENT\")\n",
+    "mining_schema.add_entity(\"CELL_TYPE\")\n",
+    "mining_schema.add_entity(\"CHEMICAL\", ontology_source=\"NCIT\")\n",
+    "mining_schema.add_entity(\"CONDITION\")\n",
+    "mining_schema.add_entity(\"DISEASE\", ontology_source=\"NCIT\")\n",
+    "mining_schema.add_entity(\"DRUG\")\n",
+    "mining_schema.add_entity(\"ORGAN\", ontology_source=\"NCIT\")\n",
+    "mining_schema.add_entity(\"ORGANISM\", ontology_source=\"NCIT\")\n",
+    "mining_schema.add_entity(\"PATHWAY\", ontology_source=\"Reactome\")\n",
+    "mining_schema.add_entity(\"PROTEIN\", ontology_source=\"NCIT\")\n",
     "\n",
-    "schema_request.schema = pd.DataFrame(schema_request_data, columns=columns)\n",
-    "display(schema_request.schema)"
+    "mining_schema.df"
    ]
   },
   {
@@ -609,7 +596,7 @@
     "enable survival during starvation. Acute, whole-body deletion of the essential \n",
     "autophagy gene Atg7 in adult mice causes a systemic metabolic defect that \n",
     "manifests as starvation intolerance and gradual loss of white adipose tissue, \n",
-    "liver glycogen and muscle mass.  Cancer cells also benefit from autophagy. \n",
+    "liver glycogen and muscle mass. Cancer cells also benefit from autophagy. \n",
     "Deletion of essential autophagy genes impairs the metabolism, proliferation, \n",
     "survival and malignancy of spontaneous tumours in models of autochthonous \n",
     "cancer. Acute, systemic deletion of Atg7 or acute, systemic expression of a \n",
@@ -639,7 +626,7 @@
    "source": [
     "mining_widget = MiningWidget(\n",
     "    mining_server_url=TEXT_MINING_URL,\n",
-    "    schema_request=schema_request,\n",
+    "    mining_schema=mining_schema,\n",
     "    article_saver=article_saver,\n",
     "    default_text=DEFAULT_TEXT)\n",
     "mining_widget"
@@ -1115,9 +1102,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "BBS-BBG",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "devel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1129,7 +1116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.10"
   },
   "toc-autonumbering": true
  },
