Implement display of saved search results

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "import ipywidgets\n",
     "\n",
-    "from bbsearch.widgets import ArticleSaver, SearchWidget, MiningSchema, MiningWidget"
+    "from bbsearch.widgets import ArticleSaver, MiningSchema, MiningWidget, SearchWidget"
    ]
   },
   {
@@ -531,7 +531,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "article_saver.summary_table()"
+    "search_widget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "search_widget.saved_results()"
    ]
   },
   {
