Fix bug in get_titles

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -21,14 +21,12 @@
     "import requests\n",
     "import time\n",
     "\n",
+    "import ipywidgets\n",
     "import networkx as nx\n",
     "import pandas as pd\n",
-    "\n",
     "import sqlalchemy\n",
     "from sqlalchemy.sql import select\n",
     "from sqlalchemy.sql import and_, or_, not_\n",
-    "\n",
-    "import ipywidgets\n",
     "\n",
     "from bbsearch.widgets import ArticleSaver, MiningSchema, MiningWidget, SearchWidget"
    ]
@@ -522,16 +520,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Status of the Article Saver"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "search_widget"
+    "Show saved articles and paragraphs"
    ]
   },
   {
