Modified notebook to reflect changes in the BBG lib (#158)
* Updated visualization app init
* Fixed commented node positions

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -861,6 +861,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "paper_3000_cyto = build_cytoscape_data(paper_spanning_tree, positions=paper_positions)\n",
+    "paragraph_3000_cyto = build_cytoscape_data(paragraph_spanning_tree, positions=paragraph_positions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def list_papers(papers, limit=200):\n",
     "    META_DATA = sqlalchemy.MetaData(bind=bbs_mysql_engine, reflect=True)\n",
     "    articles = META_DATA.tables[\"articles\"]\n",
@@ -892,30 +902,24 @@
    "source": [
     "GRAPH_OBJECTS = {\n",
     "    \"Topic-centered network (paper-based)\": {\n",
-    "        \"cytoscape\": cytoscape_graphs[\"paper\"][\"tree\"][0], \n",
-    "        \"dict\": cytoscape_graphs[\"paper\"][\"tree\"][1],\n",
-    "        \"paper_lookup\": cytoscape_graphs[\"paper\"][\"tree\"][2],\n",
-    "        \"networkx\": graphs[\"paper\"]\n",
+    "        \"graph\": graphs[\"paper\"],\n",
+    "        \"tree\": trees[\"paper\"],\n",
+    "        \"default_top_n\": 100\n",
     "    },\n",
     "    \"Topic-centered network (paragraph-based)\": {\n",
-    "        \"cytoscape\": cytoscape_graphs[\"paragraph\"][\"tree\"][0], \n",
-    "        \"dict\": cytoscape_graphs[\"paragraph\"][\"tree\"][1],\n",
-    "        \"paper_lookup\": cytoscape_graphs[\"paragraph\"][\"tree\"][2],\n",
-    "        \"networkx\": graphs[\"paragraph\"]\n",
+    "        \"graph\": graphs[\"paragraph\"],\n",
+    "        \"tree\": trees[\"paragraph\"],\n",
+    "        \"default_top_n\": 100\n",
     "    },\n",
     "    \"Naive pre-computed network (paper-based, 3000)\": {\n",
-    "        \"cytoscape\": paper_3000_cyto[0], \n",
-    "        \"dict\": paper_3000_cyto[1],\n",
-    "        \"paper_lookup\": paper_3000_cyto[2],\n",
-    "#         \"positioned\": True, # if the graph is positioned we will not generate a layout, but use the pre-computer one\n",
-    "        \"networkx\": paper_graph\n",
+    "        \"graph\": paper_graph,\n",
+    "        \"tree\": paper_spanning_tree,\n",
+    "        \"positions\": paper_positions\n",
     "    },\n",
     "    \"Naive pre-computed network (paragraph-based, 3000)\": {\n",
-    "        \"cytoscape\": paragraph_3000_cyto[0], \n",
-    "        \"dict\": paragraph_3000_cyto[1],\n",
-    "        \"paper_lookup\": paragraph_3000_cyto[2],\n",
-    "#         \"positioned\": True, # if the graph is positioned we will not generate a layout, but use the pre-computer one\n",
-    "        \"networkx\": paragraph_graph\n",
+    "        \"graph\": paragraph_graph,\n",
+    "        \"tree\": paragraph_spanning_tree,\n",
+    "        \"positions\": paragraph_positions,\n",
     "    }\n",
     "}   "
    ]
@@ -927,14 +931,11 @@
    "outputs": [],
    "source": [
     "for k, v in GRAPH_OBJECTS.items():\n",
-    "    positioned = False\n",
-    "    if \"positioned\" in v:\n",
-    "        positioned = v[\"positioned\"]\n",
-    "    \n",
+    "    tree = v[\"tree\"] if \"tree\" in v else None\n",
+    "    positions = v[\"positions\"] if \"positions\" in v else None  \n",
+    "    default_top_n = v[\"default_top_n\"] if \"default_top_n\" in v else None\n",
     "    visualization_app.set_graph(\n",
-    "        k, v[\"cytoscape\"], v[\"dict\"], v[\"paper_lookup\"],\n",
-    "        positioned=positioned,\n",
-    "        nx_object=v[\"networkx\"] if \"networkx\" in v else None)\n",
+    "        k, v[\"graph\"], tree_object=tree, positions=positions, default_top_n=default_top_n)\n",
     "\n",
     "visualization_app.set_current_graph(\"Topic-centered network (paper-based)\")\n",
     "visualization_app.set_list_papers_callback(list_papers)\n",
@@ -1102,9 +1103,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "BBS-BBG",
    "language": "python",
-   "name": "python3"
+   "name": "devel"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1116,7 +1117,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.4"
   },
   "toc-autonumbering": true
  },
