[BBS-107] Better "Saved Articles" Summary for the Search Widget (#157)
Co-authored-by: Jan Krepl <jankrepl@yahoo.com>

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -21,16 +21,14 @@
     "import requests\n",
     "import time\n",
     "\n",
+    "import ipywidgets\n",
     "import networkx as nx\n",
     "import pandas as pd\n",
-    "\n",
     "import sqlalchemy\n",
     "from sqlalchemy.sql import select\n",
     "from sqlalchemy.sql import and_, or_, not_\n",
     "\n",
-    "import ipywidgets\n",
-    "\n",
-    "from bbsearch.widgets import ArticleSaver, SearchWidget, MiningSchema, MiningWidget"
+    "from bbsearch.widgets import ArticleSaver, MiningSchema, MiningWidget, SearchWidget"
    ]
   },
   {
@@ -522,7 +520,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Status of the Article Saver"
+    "Show saved articles and paragraphs"
    ]
   },
   {
@@ -531,7 +529,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "article_saver.summary_table()"
+    "search_widget.saved_results()"
    ]
   },
   {
