Fixed permission issue with 'r+' and clean-up a lost print (#160)

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -828,10 +828,10 @@
     "print(\"Done.\")\n",
     "\n",
     "print(\"Loading pre-computed node positions...\")\n",
-    "with open(\"/gpfs/bbp.cscs.ch/project/proj116/network_analytics/data/positions/paper_3000.json\", \"r+\") as f:\n",
+    "with open(\"/gpfs/bbp.cscs.ch/project/proj116/network_analytics/data/positions/paper_3000.json\", \"r\") as f:\n",
     "    paper_positions = json.load(f)\n",
     "\n",
-    "with open(\"/gpfs/bbp.cscs.ch/project/proj116/network_analytics/data/positions/paragraph_3000.json\", \"r+\") as f:\n",
+    "with open(\"/gpfs/bbp.cscs.ch/project/proj116/network_analytics/data/positions/paragraph_3000.json\", \"r\") as f:\n",
     "    paragraph_positions = json.load(f)\n",
     "print(\"Done.\")"
    ]
@@ -888,7 +888,6 @@
     "    results = []\n",
     "    for row in result:\n",
     "        results.append(row)\n",
-    "    print(results)\n",
     "    return results"
    ]
   },
@@ -954,7 +953,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "visualization_app.run(port=\"8077\")"
+    "visualization_app.run(port=\"8076\")"
    ]
   },
   {
