--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -529,7 +529,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "search_widget.saved_results()"
+    "df_results = search_widget.saved_results()\n",
+    "df_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"\"\"For information: \\n \n",
+    "      - The query showed {len(df_results['Article ID'].unique())} different articles.\n",
+    "      - Saved {len(df_results[(df_results['Paragraph']=='✓') & (df_results['Article'] != '✓')])} paragraph(s)\n",
+    "      - Saved {len(df_results[df_results['Article']=='✓']['Article ID'].unique())} article(s)\"\"\")"
    ]
   },
   {
