New entities to keep feature added + static files for icons (#169)

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -654,9 +654,14 @@
     "\n",
     "# Drop duplicates in DataFrame\n",
     "columns_duplicates = table_extractions.columns.tolist()\n",
-    "columns_duplicates.remove('entity_type')\n",
-    "table_extractions = table_extractions.drop_duplicates(subset=columns_duplicates, keep='first', ignore_index=True)\n",
-    "table_extractions = table_extractions.dropna(subset=[\"entity\"])"
+    "try:\n",
+    "    columns_duplicates.remove('entity_type')\n",
+    "    table_extractions = table_extractions.drop_duplicates(subset=columns_duplicates, keep='first', ignore_index=True)\n",
+    "    table_extractions = table_extractions.dropna(subset=[\"entity\"])\n",
+    "except ValueError:\n",
+    "    raise ValueError(\n",
+    "        \"Could not find the extraction table, make sure you have launched the mining procedure in the widget above\"\n",
+    "    )"
    ]
   },
   {
@@ -736,7 +741,7 @@
     "curation_app.set_table(curation_input_table.copy())\n",
     "curation_app.set_ontology_linking_callback(lambda x: link_ontology(linking, default_type_mapping, x))\n",
     "\n",
-    "curation_app.run(port=8071)"
+    "curation_app.run(port=8070)"
    ]
   },
   {
@@ -760,7 +765,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "curated_table_extractions = curation_app.get_curated_table()"
+    "# Get data from the curation app\n",
+    "curated_table_extractions = curation_app.get_curated_table()\n",
+    "nodes_to_keep = curation_app.get_terms_to_include()"
    ]
   },
   {
@@ -790,7 +797,8 @@
     "type_data = curated_table_extractions[[\"entity_type\"]].rename(columns={\"entity_type\": \"type\"})\n",
     "n_most_frequent = curation_app.n_most_frequent if curation_app.n_most_frequent else 100\n",
     "graphs, trees = generate_comention_analysis(\n",
-    "    curated_table_extractions, factor_counts, n_most_frequent=n_most_frequent, type_data=type_data, factors=[\"paper\", \"paragraph\"], cores=10)\n",
+    "    curated_table_extractions, factor_counts, n_most_frequent=n_most_frequent, type_data=type_data, \n",
+    "    factors=[\"paper\", \"paragraph\"], keep=nodes_to_keep, cores=10)\n",
     "print(\"Done.\")"
    ]
   },
@@ -854,16 +862,6 @@
    "metadata": {},
    "source": [
     "Convert pre-computed graphs to a cytoscape format + add node positions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "paper_3000_cyto = build_cytoscape_data(paper_spanning_tree, positions=paper_positions)\n",
-    "paragraph_3000_cyto = build_cytoscape_data(paragraph_spanning_tree, positions=paragraph_positions)"
    ]
   },
   {
@@ -966,7 +964,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "visualization_app.run(port=\"8076\")"
+    "visualization_app.run(port=8079)"
    ]
   },
   {
