--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -1187,27 +1187,27 @@
       "Factor: paper\n",
       "-------------------------------\n",
       "Fitering data.....\n",
-      "Selected 222 most frequent terms\n",
-      "Examining 24531 pairs of terms for co-occurrence...\n",
-      "Generated 16583 edges                    \n",
+      "Selected 223 most frequent terms\n",
+      "Examining 24753 pairs of terms for co-occurrence...\n",
+      "Generated 16789 edges                    \n",
       "Created a co-occurrence graph:\n",
-      "\tnumber of nodes:  222\n",
-      "\tnumber of edges:  16583\n",
+      "\tnumber of nodes:  223\n",
+      "\tnumber of edges:  16789\n",
       "Saving the edges...\n",
       "Creating a graph object...\n",
       "\n",
       "Computing degree centrality statistics....\n",
       "Top n nodes by frequency:\n",
-      "\tcovid-19 (599)\n",
-      "\tdiabetes mellitus (596)\n",
-      "\tcoronavirus (586)\n",
-      "\tglucose (522)\n",
-      "\tglyburide (517)\n",
-      "\tsars coronavirus (507)\n",
-      "\tangiotensin-converting enzyme 2 (498)\n",
-      "\tvirus (498)\n",
-      "\tsars-cov-2 (492)\n",
-      "\tpneumonia (489)\n",
+      "\tcovid-19 (603)\n",
+      "\tdiabetes mellitus (600)\n",
+      "\tcoronavirus (590)\n",
+      "\tglucose (526)\n",
+      "\tglyburide (521)\n",
+      "\tsars coronavirus (511)\n",
+      "\tangiotensin-converting enzyme 2 (502)\n",
+      "\tvirus (502)\n",
+      "\tsars-cov-2 (496)\n",
+      "\tpneumonia (493)\n",
       "\n",
       "Computing PageRank centrality statistics....\n",
       "Top n nodes by frequency:\n",
@@ -1217,8 +1217,8 @@
       "\tglucose (0.01)\n",
       "\tglyburide (0.01)\n",
       "\tsars coronavirus (0.01)\n",
-      "\tangiotensin-converting enzyme 2 (0.01)\n",
       "\tvirus (0.01)\n",
+      "\tangiotensin-converting enzyme 2 (0.01)\n",
       "\tsars-cov-2 (0.01)\n",
       "\tpneumonia (0.01)\n",
       "\n",
@@ -1226,37 +1226,37 @@
       "Detecting communities...\n",
       "Best network partition:\n",
       "\t Number of communities: 3\n",
-      "\t Modularity: 0.12645293583924777\n",
+      "\t Modularity: 0.12529290950539357\n",
       "Detecting communities...\n",
       "Best network partition:\n",
       "\t Number of communities: 5\n",
-      "\t Modularity: 0.1662934523843908\n",
+      "\t Modularity: 0.18123949953798485\n",
       "Computing the minimum spanning tree...\n",
       "-------------------------------\n",
       "Factor: paragraph\n",
       "-------------------------------\n",
       "Fitering data.....\n",
-      "Selected 222 most frequent terms\n",
-      "Examining 24531 pairs of terms for co-occurrence...\n",
-      "Generated 3998 edges                    \n",
+      "Selected 223 most frequent terms\n",
+      "Examining 24753 pairs of terms for co-occurrence...\n",
+      "Generated 4065 edges                    \n",
       "Created a co-occurrence graph:\n",
-      "\tnumber of nodes:  222\n",
-      "\tnumber of edges:  3998\n",
+      "\tnumber of nodes:  223\n",
+      "\tnumber of edges:  4065\n",
       "Saving the edges...\n",
       "Creating a graph object...\n",
       "\n",
       "Computing degree centrality statistics....\n",
       "Top n nodes by frequency:\n",
-      "\tcovid-19 (1060)\n",
-      "\tdiabetes mellitus (849)\n",
-      "\tsars-cov-2 (514)\n",
-      "\tangiotensin-converting enzyme 2 (385)\n",
-      "\tdipeptidyl peptidase 4 (335)\n",
+      "\tcovid-19 (1071)\n",
+      "\tdiabetes mellitus (852)\n",
+      "\tsars-cov-2 (521)\n",
+      "\tangiotensin-converting enzyme 2 (393)\n",
+      "\tdipeptidyl peptidase 4 (336)\n",
       "\tglucose (313)\n",
-      "\tlung (300)\n",
-      "\tviral (263)\n",
-      "\tcoronavirus (261)\n",
-      "\tinterleukin-6 (259)\n",
+      "\tlung (312)\n",
+      "\tviral (265)\n",
+      "\tcoronavirus (262)\n",
+      "\tinterleukin-6 (261)\n",
       "\n",
       "Computing PageRank centrality statistics....\n",
       "Top n nodes by frequency:\n",
@@ -1275,11 +1275,11 @@
       "Detecting communities...\n",
       "Best network partition:\n",
       "\t Number of communities: 6\n",
-      "\t Modularity: 0.22111905464387654\n",
+      "\t Modularity: 0.22045496583334692\n",
       "Detecting communities...\n",
       "Best network partition:\n",
-      "\t Number of communities: 7\n",
-      "\t Modularity: 0.3566622668579404\n",
+      "\t Number of communities: 6\n",
+      "\t Modularity: 0.3526188969984142\n",
       "Computing the minimum spanning tree...\n",
       "Done.\n"
      ]
@@ -1296,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1324,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1334,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1353,9 +1353,8 @@
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
       "\u001b[0;32m<timed exec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;32m/gpfs/bbp.cscs.ch/ssd/apps/tools/jupyter/venvs/bbs_bbg/lib/python3.7/site-packages/kganalytics/export.py\u001b[0m in \u001b[0;36mload_network\u001b[0;34m(edge_path, node_path, edge_attr)\u001b[0m\n\u001b[1;32m     87\u001b[0m     network = nx.from_pandas_edgelist(\n\u001b[1;32m     88\u001b[0m         \u001b[0medge_list\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 89\u001b[0;31m         edge_attr=edge_attr)\n\u001b[0m\u001b[1;32m     90\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     91\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnode_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/gpfs/bbp.cscs.ch/ssd/apps/tools/jupyter/venvs/bbs_bbg/lib/python3.7/site-packages/networkx/convert_matrix.py\u001b[0m in \u001b[0;36mfrom_pandas_edgelist\u001b[0;34m(df, source, target, edge_attr, create_using)\u001b[0m\n\u001b[1;32m    348\u001b[0m             \u001b[0mg\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcols\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mattrs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    349\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 350\u001b[0;31m             \u001b[0mg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_edge\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    351\u001b[0m             \u001b[0mg\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcols\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mattrs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    352\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/gpfs/bbp.cscs.ch/ssd/apps/tools/jupyter/venvs/bbs_bbg/lib/python3.7/site-packages/networkx/classes/graph.py\u001b[0m in \u001b[0;36madd_edge\u001b[0;34m(self, u_of_edge, v_of_edge, **attr)\u001b[0m\n\u001b[1;32m    883\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_adj\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mu\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madjlist_inner_dict_factory\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    884\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_node\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mu\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnode_attr_dict_factory\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 885\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0mv\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_node\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    886\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_adj\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madjlist_inner_dict_factory\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    887\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_node\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnode_attr_dict_factory\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/gpfs/bbp.cscs.ch/ssd/apps/tools/jupyter/venvs/bbs_bbg/lib/python3.7/site-packages/kganalytics/export.py\u001b[0m in \u001b[0;36mload_network\u001b[0;34m(edge_path, node_path, edge_attr)\u001b[0m\n\u001b[1;32m     90\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     91\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnode_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 92\u001b[0;31m         \u001b[0mnode_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     93\u001b[0m     \u001b[0mnx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_node_attributes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnetwork\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnode_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"index\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     94\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mnetwork\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/gpfs/bbp.cscs.ch/ssd/apps/tools/jupyter/venvs/bbs_bbg/lib/python3.7/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36m_new_Index\u001b[0;34m(cls, d)\u001b[0m\n\u001b[1;32m    168\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    169\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 170\u001b[0;31m \u001b[0;32mdef\u001b[0m \u001b[0m_new_Index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcls\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    171\u001b[0m     \"\"\"\n\u001b[1;32m    172\u001b[0m     \u001b[0mThis\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mcalled\u001b[0m \u001b[0mupon\u001b[0m \u001b[0munpickling\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrather\u001b[0m \u001b[0mthan\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mdefault\u001b[0m \u001b[0mwhich\u001b[0m \u001b[0mdoesn\u001b[0m\u001b[0;31m'\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
@@ -1404,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1462,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
