Bugfix: lost variable when creating a new dataset (#182)

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -113,7 +113,8 @@
    "source": [
     "print(\"Loading the ontology linking data...\")\n",
     "linking = pd.read_pickle(\"/gpfs/bbp.cscs.ch/project/proj116/network_analytics/data/cord_47_linking.pkl\")\n",
-    "print(\"Done.\")"
+    "print(\"Done.\")\n",
+    "GRAPH_OBJECTS = {}"
    ]
   },
   {
@@ -615,7 +616,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GRAPH_OBJECTS = {}\n",
     "if loaded_graphs is not None:\n",
     "    for g, data in loaded_graphs.items():\n",
     "        GRAPH_OBJECTS[g] = {\n",
@@ -740,6 +740,13 @@
     "\n",
     "saver_widget.display()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
