Replaced BBG related paths with env variables

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -112,7 +112,10 @@
    "outputs": [],
    "source": [
     "print(\"Loading the ontology linking data...\")\n",
-    "linking = pd.read_pickle(\"/gpfs/bbp.cscs.ch/project/proj116/network_analytics/data/cord_47_linking.pkl\")\n",
+    "\n",
+    "ONTOLOGY_LINKING_DATA_FILE = os.getenv(\"ONTOLOGY_LINKING_DATA_FILE\") \n",
+    "assert (ONTOLOGY_LINKING_DATA_FILE is not None) \n",
+    "linking = pd.read_pickle(ONTOLOGY_LINKING_DATA_FILE)\n",
     "print(\"Done.\")\n",
     "GRAPH_OBJECTS = {}"
    ]
@@ -445,7 +448,9 @@
     "print(\"Done.\")\n",
     "\n",
     "print(\"Loading default ontology type mapping...\")\n",
-    "with open('/gpfs/bbp.cscs.ch/project/proj116/bbg/ontology-linking/ncit_to_mltypes_mapping.json', \"rb\") as f:\n",
+    "TYPE_MAPPING_FILE = os.getenv(\"TYPE_MAPPING_FILE\") \n",
+    "assert (TYPE_MAPPING_FILE is not None) \n",
+    "with open(TYPE_MAPPING_FILE, \"rb\") as f:\n",
     "    default_type_mapping = json.load(f)\n",
     "\n",
     "print(\"Done.\")"
@@ -571,12 +576,13 @@
    "source": [
     "%%time\n",
     "\n",
-    "prefix = \"/gpfs/bbp.cscs.ch/project/proj116/network_analytics/data/graphs/cord_47/full_3000\"\n",
+    "PRECOMPUTED_GRAPH_PATH_PREFIX = os.getenv(\"PRECOMPUTED_GRAPH_PATH_PREFIX\") \n",
+    "assert (PRECOMPUTED_GRAPH_PATH_PREFIX is not None) \n",
     "\n",
     "print(\"Loading pre-generated graphs with 3'000 entities...\")\n",
     "print(\"\\t - paper-based network\")\n",
-    "paper_graph = load_network(\"{}_paper_edge_list.pkl\".format(prefix), \"{}_paper_node_list.pkl\".format(prefix))\n",
-    "paper_spanning_tree = load_network(\"{}_paper_tree_edge_list.pkl\".format(prefix), \"{}_paper_tree_node_list.pkl\".format(prefix))\n",
+    "paper_graph = load_network(\"{}_paper_edge_list.pkl\".format(PRECOMPUTED_GRAPH_PATH_PREFIX), \"{}_paper_node_list.pkl\".format(PRECOMPUTED_GRAPH_PATH_PREFIX))\n",
+    "paper_spanning_tree = load_network(\"{}_paper_tree_edge_list.pkl\".format(PRECOMPUTED_GRAPH_PATH_PREFIX), \"{}_paper_tree_node_list.pkl\".format(PRECOMPUTED_GRAPH_PATH_PREFIX))\n",
     "nx.set_node_attributes(\n",
     "    paper_spanning_tree, {\n",
     "        n: len(paper_spanning_tree.nodes[n][\"paper\"])\n",
@@ -585,8 +591,8 @@
     "    \"paper_frequency\")\n",
     "\n",
     "print(\"\\t - paragraph-based network\")\n",
-    "paragraph_graph = load_network(\"{}_paragraph_edge_list.pkl\".format(prefix), \"{}_paragraph_node_list.pkl\".format(prefix))\n",
-    "paragraph_spanning_tree = load_network(\"{}_paragraph_tree_edge_list.pkl\".format(prefix), \"{}_paragraph_node_list.pkl\".format(prefix))\n",
+    "paragraph_graph = load_network(\"{}_paragraph_edge_list.pkl\".format(PRECOMPUTED_GRAPH_PATH_PREFIX), \"{}_paragraph_node_list.pkl\".format(PRECOMPUTED_GRAPH_PATH_PREFIX))\n",
+    "paragraph_spanning_tree = load_network(\"{}_paragraph_tree_edge_list.pkl\".format(PRECOMPUTED_GRAPH_PATH_PREFIX), \"{}_paragraph_node_list.pkl\".format(PRECOMPUTED_GRAPH_PATH_PREFIX))\n",
     "nx.set_node_attributes(\n",
     "    paragraph_spanning_tree, {\n",
     "        n: len(paragraph_spanning_tree.nodes[n][\"paper\"])\n",
@@ -596,10 +602,15 @@
     "print(\"Done.\")\n",
     "\n",
     "print(\"Loading pre-computed node positions...\")\n",
-    "with open(\"/gpfs/bbp.cscs.ch/project/proj116/network_analytics/data/positions/paper_3000.json\", \"r\") as f:\n",
+    "\n",
+    "PRECOMPUTED_PAPER_GRAPH_POSITIONS = os.getenv(\"PRECOMPUTED_PAPER_GRAPH_POSITIONS\") \n",
+    "assert (PRECOMPUTED_PAPER_GRAPH_POSITIONS is not None)\n",
+    "with open(PRECOMPUTED_PAPER_GRAPH_POSITIONS, \"r\") as f:\n",
     "    paper_positions = json.load(f)\n",
     "\n",
-    "with open(\"/gpfs/bbp.cscs.ch/project/proj116/network_analytics/data/positions/paragraph_3000.json\", \"r\") as f:\n",
+    "PRECOMPUTED_PARAGRAPH_GRAPH_POSITIONS = os.getenv(\"PRECOMPUTED_PARAGRAPH_GRAPH_POSITIONS\") \n",
+    "assert (PRECOMPUTED_PARAGRAPH_GRAPH_POSITIONS is not None)\n",
+    "with open(PRECOMPUTED_PARAGRAPH_GRAPH_POSITIONS, \"r\") as f:\n",
     "    paragraph_positions = json.load(f)\n",
     "print(\"Done.\")\n",
     "\n",
@@ -728,6 +739,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "TEMP_FILE_PATH = os.getenv(\"TEMP_FILE_PATH\") \n",
+    "assert (TEMP_FILE_PATH is not None)\n",
+    "\n",
     "saver_widget = DataSaverWidget(\n",
     "    forge, TOKEN, topic_resource_id,\n",
     "    table_extractions,\n",
@@ -736,7 +750,7 @@
     "    exported_graphs,\n",
     "    visualization_configs,\n",
     "    edit_history,\n",
-    "    temp_prefix=\"/gpfs/bbp.cscs.ch/project/proj116/\")\n",
+    "    temp_prefix=TEMP_FILE_PATH)\n",
     "\n",
     "saver_widget.display()"
    ]
